# sai2-primitives

./: .gitignore  CMakeLists.txt  README.md
aruco/: CMakeLists.txt
aruco/resources/aruco/: aruco.txt
aruco/resources/calibration/: charuco.txt  pixel_camera_params.txt
aruco/samples/: calibrate_camera_charuco.cpp  calibrate_camera_charuco_image.cpp  detect_markers.cpp  detect_markers_image.cpp
examples/: CMakeLists.txt
examples/01-joint_control/: 01-joint_control.cpp
examples/02-joint_control_internal_otg/: 02-joint_control_internal_otg.cpp
examples/02-task_space_control/: 02-task_space_control.cpp
examples/03-task_and_redundancy/: 03-task_and_redundancy.cpp
examples/04-surface_surface_contact/: 04-surface_surface_contact.cpp
examples/05-kuka_pick_and_place/: 05-kuka_pick_and_place.cpp  CMakeLists.txt  control.cpp  cube.urdf  marker.cpp  simviz.cpp  vision.cpp  vision.sh  world.urdf
examples/05-kuka_pick_and_place/resources/: cube.blend  cube.mtl  cube.urdf  endeff.mtl  kuka_iiwa.urdf  logitech_camera_params.txt  world.urdf
examples/07-surface_surface_contact/: 07-surface_surface_contact.cpp
examples/08-partial_cartesian_motion_control/: 08-partial_cartesian_motion_control.cpp
examples/08-partial_motion_force_task/: 08-partial_motion_force_task.cpp
examples/09-3d_position_force_controller/: 09-3d_position_force_controller.cpp
examples/10-control_at_wrist_point/: 10-control_at_wrist_point.cpp  CMakeLists.txt  kuka_iiwa.urdf  world.urdf
examples/15-haptic_control/: 15-haptic_control.cpp  CMakeLists.txt  redis_keys.h  world.urdf
examples/15-haptic_control_impedance_type/: 15-haptic_control_impedance_type.cpp  world.urdf
examples/16-haptic_control_admittance_type/: 16-haptic_control_admittance_type.cpp  redis_keys.h
examples/17-bilateral_teleop_with_POPC/: 17-bilateral_teleop_with_POPC.cpp
examples/18-com_task/: 18-com_task.cpp  CMakeLists.txt
examples/18-panda_singularity/: 18-panda_singularity.cpp
examples/18-singularity/: 18-singularity.cpp  CMakeLists.txt
examples/19-puma_singularity/: 19-puma_singularity.cpp  CMakeLists.txt  world.urdf
examples/21-singularity/: 21-singularity.cpp  CMakeLists.txt  panda_arm.urdf  plot.py
examples/22-puma_singularity/: 22-puma_singularity.cpp  CMakeLists.txt  data_processing.py  plot.py  puma.urdf
src/: HapticDeviceController.cpp  HapticDeviceController.h  POPCBilateralTeleoperation.cpp  POPCBilateralTeleoperation.h  RobotController.cpp  RobotController.h  Sai2Primitives.h
src/haptic_tasks/: HapticController.h  ImpedanceControl.h  OpenLoopTeleop.h
src/helper_modules/: ForceSensor.cpp  ForceSensor.h  OTG_6dof_cartesian.h  OTG_joints.cpp  OTG_joints.h  OTG_joints_template.h  Sai2PrimitivesCommonDefinitions.cpp  Sai2PrimitivesCommonDefinitions.h  SaiPrimitivesCommonDefinitions.h
src/primitives/: AllegroGrasp.cpp  AllegroGrasp.h  PickAndPlace.cpp  PickAndPlace.h
src/tasks/: ComMotionTask.cpp  ComMotionTask.h  JointLimitAvoidanceTask.cpp  JointLimitAvoidanceTask.h  JointTask.cpp  JointTask.h  MotionForceTask.cpp  (+10 more)
(+6 files in other folders)
