# set(CMAKE_CXX_FLAGS "-g")

# create an executable
ADD_EXECUTABLE (control control.cpp)
ADD_EXECUTABLE (simviz simviz.cpp)
ADD_EXECUTABLE (vision vision.cpp)
ADD_EXECUTABLE (marker marker.cpp)

FIND_LIBRARY(HIREDIS_LIBRARY hiredis)

# and link the library against the executable
TARGET_LINK_LIBRARIES (control
	${SAI2-PRIMITIVES_LIBRARIES}
	${SAI2-PRIMITIVES_EXAMPLES_COMMON_LIBRARIES}
	${HIREDIS_LIBRARY}
	)
TARGET_LINK_LIBRARIES (simviz
	${SAI2-PRIMITIVES_LIBRARIES}
	${SAI2-PRIMITIVES_EXAMPLES_COMMON_LIBRARIES}
	${OpenCV_LIBS}
	${HIREDIS_LIBRARY}
	)
TARGET_LINK_LIBRARIES (vision
	${SAI2-PRIMITIVES_LIBRARIES}
	${SAI2-PRIMITIVES_EXAMPLES_COMMON_LIBRARIES}
	${OpenCV_LIBS}
	${HIREDIS_LIBRARY}
	)
TARGET_LINK_LIBRARIES(marker ${OpenCV_LIBS})

# export resources such as model files.
# NOTE: this requires an install build
SET(RESOURCE_TARGET_DIR ${CMAKE_CURRENT_BINARY_DIR}/resources)
SET(RESOURCE_SRC_DIR resources)
FILE(MAKE_DIRECTORY ${RESOURCE_TARGET_DIR})
FILE(GLOB RESOURCES 
	"resources/*"
)
FILE(COPY ${RESOURCES} DESTINATION ${RESOURCE_TARGET_DIR})
